Vistas de los modulos: obras y solicitudes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -48,7 +48,7 @@
             </a>
             <ul class="nav nav-treeview">
               <li class="nav-item">
-                <a href="../../assets/pages/tables/data.html" class="nav-link">
+                <a href="/configuracion" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Configuración</p>
                 </a>
@@ -99,6 +99,18 @@
                 <a href="/obras" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Obras</p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="/crear-solicitud" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>soli</p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="/modificar-solicitud" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>soli2</p>
                 </a>
               </li>
             </ul>
