--- a/src/app/configuracion/configuracion.component.html
+++ b/src/app/configuracion/configuracion.component.html
@@ -1,1 +1,238 @@
-<p>configuracion works!</p>
+<!-- Content Wrapper. Contains page content -->
+<div class="content-wrapper">
+    <!-- Content Header (Page header) -->
+    <div class="content-header">
+      <div class="container-fluid">
+        <div class="row mb-2">
+       
+        </div><!-- /.row -->
+      </div><!-- /.container-fluid -->
+    </div>
+    <!-- /.content-header -->
+
+ 
+
+    <section class="content">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-12">
+            <h2 class="mb-5 mx-2 blockquote">Roles</h2>
+            <div class="card">
+              <div class="card-header">
+                <nav class="navbar bg-light mx-3">
+                    <form class="d-flex" role="search">
+                      <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
+                      <button class="btn btn-outline-success" type="submit">Buscar</button>
+                    </form>
+         
+                    <button class="btn btn-success float-right mt-1" data-toggle="modal" data-target="#crearUsu"><i class="fa-solid fa-plus"></i></button>
+                </nav>
+              </div>
+              <!-- /.card-header -->
+              <div class="card-body">
+                <section class="ftco-section">
+                  <div class="container">
+                    <div class="row justify-content-center">
+              
+                    </div>
+                    <div class="row">
+                      <div class="col-md-12">
+                        <div class="table-wrap">
+
+
+                          <table id="example2" class="table table-bordered table-hover">
+                            <thead class="table-dark">
+                            <tr>
+                              <th>Id rol</th>
+                              <th>Nombre rol</th>
+                              <th>Estado</th>
+                              <th>Fecha de registro</th>
+                              <th>Acciones</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr *ngFor="let rol of rolesArray">
+                               <td>{{ rol.idRol }}</td>
+                               <td>{{ rol.nombreRol }}</td>
+                               <td>{{ rol.estado }}</td>
+                               <td>{{ rol.fechaRegistro }}</td>
+                               
+                              <td><button class="btn btn-warning m-2" data-toggle="modal" data-target="#exampleModal" (click)="cargarUsu(rol)"><i class="fa-solid fa-pen-to-square"></i></button> <button class="btn btn-danger" (click)="eliminarUsu()"><i class="fa-sharp fa-solid fa-trash-can"></i></button></td>
+                         
+                            </tbody>
+                           
+                          </table>
+                        
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </section>
+              
+              </div>
+              <!-- /.card-body -->
+            </div>
+        
+            <!-- /.card -->
+          </div>
+          <!-- /.col -->
+        </div>
+        <!-- /.row -->
+      </div>
+      <!-- /.container-fluid -->
+
+    </section>
+
+
+
+
+<!-- modificarUsu -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modificar Rol</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+
+        <div class="container">
+             <!-- Info boxes -->
+        <div class="row p-2">
+          <div class="col-md-6">
+            <div class="mb-3">
+              <label for="exampleFormControlInput1" class="form-label">Nombre rol</label>
+              <input type="text" [(ngModel)]="selectedUSer.nombreRol"  class="form-control" placeholder="Ingrese el nombre del rol">
+            </div>
+          
+            <div class="form-check form-switch">
+              <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+              <label class="form-check-label" for="flexSwitchCheckDefault">Configuración</label>
+            </div>
+            <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+                <label class="form-check-label" for="flexSwitchCheckDefault">Usuarios</label>
+            </div>
+            <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+                <label class="form-check-label" for="flexSwitchCheckDefault">Materiales</label>
+            </div>
+            <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+                <label class="form-check-label" for="flexSwitchCheckDefault">Servicios</label>
+            </div>
+
+            <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+                <label class="form-check-label" for="flexSwitchCheckDefault">Empleados</label>
+            </div>
+
+          </div>
+
+
+
+          <div class="col-md-6">
+            <div class="mb-3">
+                <label for="exampleFormControlInput1" class="form-label">Seleccione el estado</label>
+                <select class="custom-select">
+                    <option value="1">Activo</option>
+                    <option value="2">Inactivo</option>
+                  </select>
+              </div>
+         
+            <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+                <label class="form-check-label" for="flexSwitchCheckDefault">Clientes</label>
+            </div>
+            <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+                <label class="form-check-label" for="flexSwitchCheckDefault">Solicitudes</label>
+            </div>
+            <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+                <label class="form-check-label" for="flexSwitchCheckDefault">Cotizaciones</label>
+            </div>
+
+            <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+                <label class="form-check-label" for="flexSwitchCheckDefault">Obras</label>
+            </div>
+
+          </div>
+        </div>
+        </div>
+
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+        
+        <button type="button" class="btn btn-primary">Modificar</button>
+      </div>
+    </div>
+
+
+
+
+
+
+  </div>
+</div>
+
+
+
+<!-- crearUsu -->
+<div class="modal fade" id="crearUsu" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Registrar usuario</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+
+        <div class="container">
+             <!-- Info boxes -->
+             <div class="row p-2">
+              <div class="col-md-12">
+                <div class="mb-3">
+                  <label for="exampleFormControlInput1" class="form-label">Nombre rol</label>
+                  <input type="text" [(ngModel)]="selectedUSer.nombreRol"  class="form-control" placeholder="Ingrese un nombre de rol">
+                </div>
+                <div class="mb-3">
+                  <label for="exampleFormControlInput1" class="form-label">Contraseña</label>
+                  <input type="password" [(ngModel)]="selectedUSer.estado" class="form-control" placeholder="Ingrese una contraseña">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label">Contraseña</label>
+                    <input type="password" [(ngModel)]="selectedUSer.fechaRegistro" class="form-control" placeholder="Ingrese una contraseña">
+                  </div>
+                <div class="form-check form-switch">
+                  <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+                  <label class="form-check-label" for="flexSwitchCheckDefault">Marque el estado</label>
+                </div>
+              </div>
+            </div>
+
+
+        </div>
+
+    
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+        <button type="button" class="btn btn-primary" (click)="agregarUsuario()" data-dismiss="modal">Guardar</button>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+
+  
+
+  </div>
